[package]
name = "xmr_stats"
version = "0.1.0"
description = "An example generated using the simple-async template"
authors = ["Your Name <you@example.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1.40.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }